--- a/style.css
+++ b/style.css
@@ -1,13 +1,26 @@
 body {
     background-color: #D6DDE2;
     text-align: center;
-    font-family: 'Playpen Sans', cursive;
+    font-family: 'Sometype Mono', sans-serif;
+    line-height: 1.4;
 }
 
 article {
-    width: 40vw;
+    width: 80%;
     border: 3px solid black;
-    border-radius: 5px;
+    border-radius: 10px;
     padding: 20px;
     margin: auto;
+}
+
+a {
+    text-decoration: none;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 200,
+  'GRAD' 0,
+  'opsz' 24
 }
