--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body {
     background-color: #D6DDE2;
     text-align: center;
-    font-family: 'Sometype Mono', sans-serif;
-    line-height: 1.4;
+    font-family: 'Julee', sans-serif;
+    line-height: 1.5;
+    font-size: 110%;
 }
 
 article {
